# myfs

./: CMakeLists.txt  README.md  SPEC.txt
include/: fs.layout  myfs.h  types.h  utils.h
src/: myfs.c  myfs.cpp  utils.cpp
tests/: main.sh
